...
        android:id="@+id/scienceSettingCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:tag="science"
        android:text="Science"
        app:layout_constraintStart_toStartOf="@+id/foodSettingsCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/foodSettingsCheckBox"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/foodSettingsCheckBox"
        android:layout_width="wrap_content"
...
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrepreneursSettingCheck" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
